src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.absolute-service-list{
  color:#ed5724;
    text-align: right;
    letter-spacing: -.03em;
    font-size: 8vw;
    font-weight: 800;
    line-height: 1em;
    padding-top:400px;
}

.absolute-service-list-wrapper{
      width: 55%;
    position: absolute;
    top: -80px;
    bottom: -80px;
    right: 40px;
    overflow: hidden !important;
    overflow-y: hidden !important;
    

}

.coollistcontainer{
  width: 100%;
    max-width: 1380px;
    min-height: 50px;
    flex-direction: column;
    justify-content: center;
    margin-left: auto;
    margin-right: auto;
    padding-left: 40px;
    padding-right: 40px;
    display: block;
    overflow-y: hidden ;

}

.tempcontainer {
  background-color: #00303F;
  height:100vh;
  width:100vw;
  display:flex;
  justify-content: center;
}

.shadows {
  text-shadow: 2px 2px 4px #000000;
}

.triplerowwrapper{
  background-color: #ed5724;
  height:150px;
}

.triple {
  background-color: #ed5724;
}
.homewrapper {
  background-color:#f8f7f6;
}

.identity-box{
  position:relative;
  background-color:#e2d2a9;
  border-radius:25px;
  height:400px;
}

.big-headline {
  color:#ed5724;
  font-weight:700;
  font-size:120px;
}

.customers-wrapper{
  background-color: #ed5724;
  color:white;
  height:450px;
  width:100%;
}

.sidebarcontainer{
  background-image: linear-gradient(white, rgba(255, 255, 255, 0.5));
  height:850px;
  
}

.photoboxes{
  height:400px;
  width:500px;
  background-size:cover ;
  background-position:top;
}

.iconboxone {
  position:absolute;
top:-150px;
left:50px;
}

.iconboxtwo{
  position:absolute;
bottom:-50px;
right:50px;
}

.orangebg {
  background-color: #ed5724;

}

.scrollbar-container {
  display: flex;
  align-items: center; /* Adjust as needed */
}

.scrollbar-gif {
  /* Adjust width, height, and margins as necessary */
  width: 50%;
  height: auto;
  margin-left: 10px; /* Space between the scrollbar and the GIF */
}

.down-arrow {
  position: absolute;
  top:120px;
  left: 50px;
  width: 0;
  height: 30px;
  border: 2px solid;
  border-radius: 2px;
  animation: jumpInfinite 1.5s infinite;

}

.introtextbox{
  max-width:500px;
}

.down-arrow:after {
  content: " ";
  position: absolute;
  top: 12px;
  left: -8px;
  width: 16px;
  height: 16px;
  border-bottom: 4px solid;
  border-right: 4px solid;
  border-radius: 4px;
  transform: rotateZ(45deg);
}

.needmore{
  background-color: #ed5724;
  border-radius:25px;
  color:white;
  height:400px;

}

@keyframes jumpInfinite {
  0% {
    margin-top: 0;
  }
  50% {
    margin-top: 20px;
  }
  100% {
    margin-top: 0;
  }
}

@media screen and (max-width: 800px) {
.homewrapper{
  width:900px;
}

.triprowmob {
  display:flex;
  flex-direction:column;
  justify-content:center;
  margin-left:200px;

}
.triplerowwrapper{
  height:500px;
  gap:30px;
}
.coollistcontainer{
  width: 100%;
  max-width: 1380px;
  min-height: 50px;
  flex-direction: column;
  justify-content: center;
  margin-left: auto;
  margin-right: auto;
  padding-left: 40px;
  padding-right: 40px;
  display: block;
  overflow-y: hidden ;
}

.absolute-service-list{
  color:#ed5724;
    text-align: right;
    letter-spacing: -.03em;
    font-size: 18vw;
    font-weight: 800;
    line-height: 1em;
    padding-top:500px;
}
.mainhead{
  max-width:400px;
  margin-left:180px;
}
.iconboxtwo{
  position:absolute;
bottom:-50px;
right:0px;
}
}

.galleryimages{
width:100px;
height:auto;
}

